src/test/deca/syntax/valid/HelloWorld/ListInst-0Inst.deca
// Description:
//    Test on a empty list of instructions.
//
// Results:
//    test_lex should work.
//    test_synt should work too.
//
// History:
//    created on 05/01/2022

{ /* No instruction to see here */
}
